CHANGES.txt - 2008-04-08
------------------------

CHANGES IN CUPS V1.4b1

	- The cups-deviced helper application now runs backends in
	  parallel to get the list of devices faster.
	- Added --enable-pap configure option.
	- The default cupsd.conf file now includes an "authenticated"
	  policy which requires authentication for remote print jobs.
	- Added support for Czech and Hungarian in PPD files
	  (STR #2735, STR #2736)
	- The PPD compiler tools now support Mac OS X .strings files
	  for localization (STR #2737)
	- ppdOpen*() now default the colorspace member to PPD_CS_N
	  when no DefaultColorSpace attribute is present in the PPD
	  file.
	- The build system has been updated to support separate
	  installation of data, program, header, and library files.
	- All support libraries are now built as shared libraries
	  by default.
	- The scheduler now manages ICC color profiles on Mac OS X.
	- The network backends (ipp, lpd, socket) now support
	  SNMP-based supply and page count monitoring (STR #1655)
	- The lppasswd program is no longer installed setuid to
	  root to make the default installation more secure.
	- Added a new ppdLocalizeMarkerName() function to get
	  the localized version of a marker-names value.
	- The scheduler now provides the printer-dns-sd-name
	  attribute for printers shared via DNS-SD/Bonjour.
	- The pdftops filter now executes the Xpdf or poppler
	  pdftops utility to convert PDF files (STR #1471)
	- Bonjour printer registrations now advertise as local or
	  global based on the current access policies for the
	  printer.
	- cupsGetDests*() and cupsSetDests*() now track the last
	  used printer preference on Mac OS X.
	- Added a new streaming request API (STR #2261)
	- Added a new cupsGetNamedDest() function to the CUPS
	  library for faster printing with lp and lpr (STR #2638)
	- The scheduler now sets the PAM RHOST value on systems
	  that support it (STR #2637)
	- The scheduler now sandboxes child processes when
	  possible.